Fixing spelling errors

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -138,7 +138,7 @@ Such attacks aim to lower the number of participating miners or to fracture the 
 \subsection{Privacy and anonymity}
 %Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.
 Data in a Blockchain ledger is public (at least to all miners) in order to enable verification, meaning that sensitive data is inherently non-private.
-Confidentiality can be provided by hosting a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that allow miners to verify the correctness of encrypted transactions (e.g., multi-party computation, functional encryption)~\cite{SP:KMSWP16}.
+Confidentiality can be provided by hosting a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that allow miners to verify the correctness of encrypted transactions (e.g., zero-knowledge proofs, secure multi-party computation, and functional encryption)~\cite{SP:KMSWP16}.
 Still, the use of cryptography limits auditability and the ability to have 
 meaningful shared governance.
 
@@ -167,8 +167,8 @@ competing services.
 For example, Blockchain-based money transfer services are generally orders of 
 magnitude faster than similar bank-provided services, but this speed increase 
 does not arise from the use of Blockchain (which generally has higher technical 
-overhead) but because the Blockchain-based services were not complying with the 
-time-consuming regulatory processes that the bank-provided services were (e.g., 
+overhead) but because the Blockchain-based services are not complying with the 
+time-consuming regulatory processes that are required of the bank-provided services (e.g., 
 mandatory holding periods).
 Our analysis revealed widespread concern with regulatory issues surrounding 
 cryptocurrencies, Blockchain-based assets, and other Blockchain applications. 
