--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -19,7 +19,8 @@ Nevertheless, there remains significant interest in the question of whether the 
 In particular, we have heard researchers, business executives, and government 
 leaders consistently ask the following three questions: (1) what exactly is 
 Blockchain technology, (2) what capabilities does it provide, and (3) what are 
-good applications for Blockchain technology.%, and (4) how does it relate to 
+good applications for Blockchain technology. 
+%, and (4) how does it relate to 
 %other approache distributed technologies (e.g., distributed databases).
 %
 %Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
