--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -5,7 +5,7 @@
 
 In addition to a survey of academic literature, we conducted a rigorous textual analysis of non-academic sources (hereafter referred to as industry),
 %\footnote{Here, we consider industry broadly: corporations, small and medium business, startups, and consortia.}
-including but not limited to source from the technology, financial, and healthcare sectors.
+including but not limited to sources from the technology, financial, and healthcare sectors.
 This analysis provides the basis for the results discussed in this paper.
 While there is valuable information to be learned from industry, analyzing 
 these sources brings challenges: (a) a lack of precise terminology and 
@@ -71,7 +71,7 @@ We gathered materials using a variety of methods:
 	%IBM, Microsoft, Gem).
 %	\item Downloaded materials published by Blockchain consortiums (e.g., Hyperledger\footnote{\url{https://www.hyperledger.org/}}, Decentralized Identity Framework\footnote{\url{http://identity.foundation/}}) and their members (e.g., IBM, Microsoft, Gem).
 	\item Reviewing documents from major accounting firms, banks, and tech companies.
-	\item Browsing new articles and blog posts related to Blockchain technology.% This included articles which gave lists of interesting Blockchain papers.
+	\item Browsing news articles and blog posts related to Blockchain technology.% This included articles which gave lists of interesting Blockchain papers.
 	\item Reviewing submissions to the ONC Blockchain in Health Care Competition.
 	%\footnote{\url{https://www.healthit.gov/topic/grants-contracts/announcing-blockchain-challenge}}.
 \end{itemize}
@@ -116,13 +116,15 @@ These concepts are grouped into five categories:
 	applications of Blockchain technology. Examples include crytocurrencies, 
 	supply chain management, and identity management.
 	
-	\item \emph{Normative properties (Figure~\ref{fig:normative-properties}).}
+	\item \emph{Normative properties.} 
+	%(Figure~\ref{fig:normative-properties})
 	Normative properties represent what people hope to achieve using Blockchain technology. 
 	Importantly, these properties are not provided by the use of Blockchain 
 	technology as are the technical properties and capabilities. Rathey they 
 	typically require the careful design of larger systems of which Blockchain 
 	technology may only be a small component.
-	In general, normative properties strongly relate to the hype surrounding Blockchain technology%.
+	In general, normative properties strongly relate to the hype surrounding Blockchain technology
+	%.
 	and as such we do not discuss them further in this article.
 	%		Examples include public participation, trustlessness, and censorship resistance.
 \end{itemize}
