--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -47,7 +47,7 @@ Shared governance is possible because miners can configure their clients to
 only approve the transactions they believe are acceptable, effectively allowing 
 them to vote for how the system should function.
 If there is disagreement regarding system functionality, it is possible for a Blockchain-based system to fork, resulting in the creation of competing systems that include only a subset of each other's transactions.
-Usually these forks are temporary, with miners either choosing to all adopt the same rules, but it is possible for a fork to result in the permanent creation of two non-interoperable Blockchain systems (e.g., Bitcoin Classic and Bitcoin Cash).
+Usually these forks are temporary, with miners eventually choosing to all adopt the same rules, but it is possible for a fork to result in the permanent creation of two non-interoperable Blockchain systems (e.g., Bitcoin Classic and Bitcoin Cash).
 
 %In Blockchain systems that use a majority-voting consensus mechanism for transaction validation, there are two types of forks that can occur.
 %In a soft fork, transactions that validate with the modified rules will also validate with the original rules, but transactions that validate with the original rules might not validate with the modified rules.
@@ -178,5 +178,5 @@ The computational power of these scripts is determined by the system's rules, ra
 
 \paragraph{Data Discoverability}
 If users are allowed to read any record in a distributed data store maintained 
-by a Blockchain, then it is trivial to search for records of interest.
+by a Blockchain, then it is possible to search for records of interest.
 This capability is nothing more than what is provided by having a read-only data lake, but still it was frequently discussed in the literature we reviewed.
