--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -58,7 +58,7 @@ Furthermore, a smart contract can structure payouts that are contingent on
 specific events, such as a derivative that becomes valuable if a stock price 
 decreases, an insurance payout for a fire, or a payment that covers a loan 
 default.
-As long as the contingent event can be registered by the BLockchain (either 
+As long as the contingent event can be registered by the Blockchain (either 
 because it occurs on-chain or can be determined by an off-chain oracle), these 
 use cases are perfectly valid.
 
