title, byline, intro

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -15,8 +15,7 @@
 \IEEEoverridecommandlockouts
 
 \begin{document}
-\title{Blockchain Technology and Its Potential Use Cases}
-%TODO: This needs to be anonymized when submitted.
+\title{Blockchain Technology: What is it good for?}
 
 \makeatletter
 \newcommand{\linebreakand}{%
