--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,6 +1,9 @@
 % !TEX root = ../main.tex
 
-\snote{Add reference to technical report describing how Blockchain fits into the overall set of distributed systems?}
+\snote{Add reference to technical report describing how Blockchain fits into the overall set of distributed systems? }
+
+\jnote{Would make a good sidebar }
+
 
 \section{Conclusion}
 Ultimately, Blockchain technology is neither a panacea nor worthless.
