--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -7,70 +7,10 @@ In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper desc
 In response to Bitcoin's success, the technology was quickly dissected to understand how it works and what is new. Its most innovative component has been labeled ``the blockchain,'' a decentralized approach for participants to agree upon and lock in data and computation.
 
 % Cite Bruce Schneier wired article
-If you read technology news, you are most commonly left with the cheery impression that blockchain technology reduces or even complete eliminates trust. The use cases of such an innovation stretch the imagination! Occasionally, you might get lucky and hear a contrarian take~\cite{}. The truth about trust is that it's complicated. Blockchain does eliminate specific, narrow reliances on trust, but it might shift it into new and different assumptions---assumptions that might be better or worst for each specific use case. Likewise, there are not a lot of single sentence talking points that will be accurate about blockchain technology's efficiency, security, cost, etc. 
+When we read technology news, we are most commonly left with the cheery impression that blockchain technology reduces or even completely eliminates trust. The use cases of such an innovation stretch the imagination! Occasionally, we get lucky and hear a contrarian take~\cite{}. The truth about trust is that it's complicated. Blockchain does eliminate specific, narrow reliances on trust, but it might shift it into new and different assumptions---assumptions that might be better or worst for each specific use case. Likewise, there are not a lot of single sentence talking points that will be accurate about blockchain technology's efficiency, security, cost, etc. 
 
-It is clear that we need a more nuanced discussion this technology. We frequently hear business executives, government leaders, investors, and researchers ask the following three questions: (1) what exactly is blockchain technology, (2) what capabilities does it provide, and (3) what are good applications? Our goal for this article is to thoroughly answer these questions, while providing a holistic overview of blockchain technology that separates `hype' from `reality' and proposes a useful lexicon for discussing the specifics of blockchain technology in the future.
+It is clear that we need a more nuanced discussion on this technology. We frequently hear business executives, government leaders, investors, and researchers ask the following three questions: (1) what exactly is blockchain technology, (2) what capabilities does it provide, and (3) what are good applications? Our goal for this article is to thoroughly answer these questions,  provide a holistic overview of blockchain technology that separates hype from reality, and propose a useful lexicon for discussing the specifics of blockchain technology in the future.
 
-
-
-%We accomplish this goal by using grounded theory---a structured approach to gathering and analyzing qualitative data---to thoroughly analyze a large corpus of literature on Blockchain technology.
-%This method enables us to answer the above questions while limiting researcher bias, separating thought leadership from peddled hype and identifying  open research questions related to Blockchain technology.
-%We also discuss lessons learned from our analysis of this space using this approach.
-
-%The audience for this paper is broad as it aims to help researchers in a variety of areas come to a better understanding of Blockchain technology and identify whether it may be of use in their own research.
-
-
-
-%, and (4) how does it relate to 
-%other approache distributed technologies (e.g., distributed databases).
-%
-%Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
-%This lack of clarity stems at least in part from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
-%In this article, 
-%we attempt to address this ambiguity and 
-%we provide a holistic overview of Blockchain technology, set forth a common 
-%lexicon for discussing Blockchain technology, and answer the three questions 
-i%dentified above.
-
-%\begin{table}
-%	\centering
-%	
-%	\begin{tabular}{l|l}
-%		\textbf{Academia} & \textbf{Industry} \\
-%
-%		Increased interest recently & Long-term interest \\
-%		Focused on specific subsystems & Takes a holistic view \\
-%		Technical experts & Use case experts \\ \hline
-%	\end{tabular}
-%	
-%	\caption{Academic vs. industrial sources}
-%	\label{tab:sources}
-%\end{table}
-
-%To accomplish these goals, we conducted a textual analysis of papers on Blockchain technology from non-academic sources (hereafter referred to as \emph{industry}).
-%The choice to focus our analysis on literature from industry was based on the unique suitability of that literature (see Table~\ref{tab:sources}) to answer the three questions we identified above:
-%First, industry became heavily involved in Blockchain technology before academia and thus has had more time to fully consider its implications.
-%Second, industry literature tends to discuss and evaluate Blockchain technology holistically, which provides the broad perspective needed to answer questions one and two.
-%Finally, much of industry literature is written by use case experts who are well positioned to answer the third question.
-%
-%In contrast, academic literature focuses on technical deep dives on Blockchain technology's subsystems and implementations built on Blockchain technology.
-%For example, existing academic surveys on Blockchain technology have focused on particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
-%In this regard, the existing literature acts as a good compliment to this paper---i.e., researchers interested in Blockchain technology can read this paper to gain a holistic overview of the space and then dive deeply into specific subtopics by reviewing other Blockchain survey papers.
-
-% Jeremy: We invert the common approach: we don't study blockchain people looking at use-cases, we study the use case people looking at blockchain
-%To answer these questions, it is insufficient to consider academic sources alone.
-%In contrast, there has been significant work from non-academic sources (hereafter referred to as \emph{industry}) attempting to answer the questions as they search for applications and new product offerings that could be enabled by Blockchain technology.  Both freshly-formed and decades-old companies have developed answers to these questions.  Unfortunately, some of this work is fueled by hype and most industry documents are published without a peer-review process and associated rigor expected of academic literature.
-
-%To address these limitations, we analyzed literature produced by industry using grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
-%This allowed us to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-%Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
-
-%Ultimately, our technical analysis was successful at answering our three questions and in this paper we present those answers.
-%While some readers may find the results described in this article unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large and provide a common reference point for discussion on Blockchain technology.
-%While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
-%Taken together, the results in this paper represent the most complete overview 
-%of Blockchain technology and its potential use cases available in a single work.
-%The results are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas.
 %Concretely, our key contributions are:
 
 %\begin{enumerate}
